# wolfe_simplex

./: CMakeLists.txt  README.md  main.cpp  wolfe_simplex.cpp
active_set_dual/: QuadProg.cpp  QuadProg.h
include/: except.h  matrix-inl.h  matrix.h  vector-inl.h  vector.h
interior_point_qp/: QuadraticProgramming.cpp  QuadraticProgramming.h
line_search/test/: test_line_search.cpp
lp/: simplex.cpp  simplex.h
opt_constr/test/: test_constr.cpp
opt_global/BB/: bb.cpp  bb.h
opt_global/GA/: GA.cpp  GA.h
opt_global/SA/: SA.cpp  SA.h
opt_global/test/: test_global.cpp
opt_unconstr/: newton.cpp  newton.h
opt_unconstr/test/: test_unconstr.cpp
plot/: 5.py
qp/interior_point_qp/: QuadraticProgramming.cpp  mathOperator.h
qp/test/: test_qp.cpp
qp/wolfe_simplex/: wolfe_simplex.cpp
wolfe_simplex/: wolfe_simplex.h
